--- a/03-Day3.Rmd
+++ b/03-Day3.Rmd
@@ -99,4 +99,22 @@ _Yes!! That was purrfect!_
 </details>
 
 
+## Survey says {-}
+<hr>
+
+On the __front__ of your sticky note answer one of these:
+
+- Something you really liked learning today?
+- A useful thing you learned?
+- A new skill you are you excited about using?
+
+On the __back__:
+
+- A lingering question you have about the material.
+- A topic that was confusing and could use more clarification?
+
+
+We will compile the questions and send out answers before next class. If you think of something later, please e-mail us any questions you have. If you’re uncertain about something I guarantee someone else is as well. So help a friend, and ask a question.
+
+
 
