--- a/02_Day2.Rmd
+++ b/02_Day2.Rmd
@@ -10,26 +10,26 @@ output:
     css: css/camp_style.css
     number_sections: true
     self_contained: false
-fontsize: 14pt
+fontsize: 18pt
 monofont: Source Code Pro
-monofontoptions: Scale = 1.1
+monofontoptions: Scale = 1.4
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = F, message = F)
-knitr::opts_chunk$set(fig.width = 10, fig.height = 6) 
+knitr::opts_chunk$set(fig.width = 10, fig.height = 5.2) 
 htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 ```
 
 
-## Good morning, young Jedis! {-}
+# Good morning, young Jedis! {-}
 <hr>
 
 ![](images/day2_bb8_sq.png){width="260" style="float: left; margin-right: 60px; margin-top: -10px;"}
 
 <br><br>
 
-__Please connect to your droid__
+### Please connect to your droid {-}
 
 - Open the __Start menu__  (_Click the Windows logo on the bottom left of the screen_)
 - Select ` Remote Desktop Connection `
@@ -46,10 +46,14 @@ __Open your RStudio project__
 
 <br>
 
-<details><summary class = "btn_code"> __Don't have a project yet?__ </summary><p>
 
+<details>
+<summary class="btn_code"> __Don’t have a project yet?__ </summary><p>
 
-<a href="https://github.com/MPCA-air/RTrain/blob/master/data/junk_data.zip?raw=true"> <span class = "btn btn-info"> __DOWNLOAD__  </span></a> —  The Day 1 project files  
+<div class="quiz">
+<br>
+
+<a href="https://github.com/MPCA-air/RTrain/blob/master/data/junk_data.zip?raw=true"><span class = "btn btn-info"> __DOWNLOAD__  </span></a> —  The Day 1 project files  
 
 - __Open__ the `.zip` file
 - __Copy__ the "junk_data" folder to your Desktop 
@@ -59,72 +63,85 @@ __Open your RStudio project__
 <br>
 
 <hr>
+</div>
 
 </p></details>
+
 
 
 ## Day 2 schedule  {-}
 
 1. Data transformations
-    - Add new columns.
-    - Summarize your data.
-    - Split groups and categories in your data.
-    - Save data.
+    - Add new columns
+    - Summarize your data
+    - Split groups and categories in your data
+    - Save data
     
-![](images/starwars_sleeping.png){width="260" align="right" style="margin-top: -58px; margin-left: 20px; margin-right: 6px;"}
+![](images/starwars_sleeping.png){width="260" align="right" style="margin-top:-58px; margin-left:20px; margin-right:6px;"}
 
-2. Continue to make __plots__.
-    - Scatter plots and transparency.
-    - Add a smoothed trend line to the plot.
-    - Add titles, colors, and axis labels.
-    - Bar charts.
-    - Histograms.
-    - Box plots.
-    - Log transform your chart axis. 
+2. Continue to make __plots__
+    - Scatter plots and transparency
+    - Add a smoothed trend line to the plot
+    - Add titles, colors, and axis labels
+    - Bar charts
+    - Histograms
+    - Box plots
+    - Log transform your chart axis
  
+<br>
 
 
-## Day 1 review {-}
-<hr>
+<details>
+<summary class="btn_code_blue"> __Day 1 review__ </summary>
+<p>
 
-### 1. Load your packages {-}
+<br>
 
-_Hint: Put the packages you need at the top of every script._
-```{r, eval = T}
+__1. Load your packages__
+
+__Hint:__ Put the packages you need at the top of every script.
+
+```{r top-packages, eval=F}
 library("readr")
 library("dplyr")
 
-# Your code starts here.
+# Your code starts here
+#...
 
 ```
 
 <br>
 
+__2. Load data with `read_csv()`__
 
-### 2. Load data with `read_csv()` {-}
-```{r, eval = T}
-
+```{r, eval=F}
 my_scrap_data <- "data/starwars_scrap_jakku_full.csv"
-scrap <- read_csv(my_scrap_data)
-scrap <- filter(scrap, Origin != "All")
 
+scrap <- read_csv(my_scrap_data)
+
+scrap <- filter(scrap, Origin != "All")
 ```
 
 <br>
 
-<details><summary class = "btn_code_blue"> Read a CSV file using base R </summary>
-<p>
+<div class="note">
+__Read a CSV file using base R__
 
-Sometimes there are more ways than one to solve puzzles in R. You don't actually need a package to read csvs into R. You can do this in _base R_. Let's not get carried away with all of the ways to do things, but just know---if one way doesn't work or is too slow..there is always another way to go about things.
+There’s often more ways than one to solve a puzzle in R. If one way doesn’t work for you data or is moving slowly, there is likely another way to go about things. You don’t always need a package to read CSVs into R. You can also do this in _base_ R with the function `read.csv()`, also known as "read __dot__ csv". 
 
-Copy the code below to your R script and run the line with the `read.csv` function (Hit __CTRL + ENTER__). It will return the Star Wars scrap data `scrap`. The character string `"~data/scrap.csv"` inside the parentheses of the `read.csv()` function is the path of the data file.
+The code below will also read in the Jakku scrap data file from Day 1.
+```{r, eval=F}
 
-```{r, base r read, eval = F, echo = T}
-data <- read.csv("X:/Agency_Files/Outcomes/Risk_Eval_Air_Mod/_Air_Risk_Evaluation/R/R_Camp/Intro to R\RTrain - Star Wars/data/starwars_scrap_jakku_full.csv")
+data <- read.csv("data/starwars_scrap_jakku.csv", stringsAsFactors = F)
+
 ```
 
-### 3. `select()` and `arrange()` your data {-}
-```{r select arrange review, eval = F}
+</div>
+
+<br>
+
+__3. `select()` and `arrange()` your data__
+```{r select-arrange-review, eval=F}
 
 # Sort from low to high
 arrange(scrap, Amount)
@@ -140,12 +157,13 @@ select(scrap, c(Origin, Dest))
 <br>
 
 
-### 4. Filter your data with `filter()` {-}
+__4. Filter your data with `filter()`__
 
-_Hint: Numbers don't need quotes._
-```{r filter review, eval = F}
+__Hint:__ Numbers don’t need quotes.
 
-# Filter to Salvage items with Amounts of 299
+```{r filter-review, eval=F}
+
+# Filter to Salvage items to only those with Amounts of 299
 scrap_299 <- filter(scrap, Amount == 299)
 
 # Filter to Salvage items that went to trade caravans and raiders
@@ -155,227 +173,286 @@ scrap_trade <- filter(scrap, Dest %in% c("Trade caravan", "Raiders"))
 
 <br>
 
-### Questions from Day 1 {-}
+__Questions from Day 1__
 
-- Finding new packages and functions
+- Finding new packages and functions?
     - Use __Cheatsheets__ to find common functions: 
         - Go to _Help_ > _Cheatsheets_. 
-            - _Data Transformation_ is what we're learning now. 
-            - _Data Visualization_ is also good. 
+        - _Data Transformation_ is what we’re learning now. 
+        - _Data Visualization_ is also good. 
     - To search for functions 
         - [google.com](www.google.com): include `r` or `rstats` + `the question`
         - [stackoverflow.com](https://stackoverflow.com/questions/12675147/how-can-we-make-xkcd-style-graphs) + use the `[r]` tag
-    - To search packages in R get the: [CRANsearcher](https://github.com/RhoInc/CRANsearcher)
+        - To search packages in R get the: [CRANsearcher](https://github.com/RhoInc/CRANsearcher)
 
-- Where's my _History_?
+- Where’s my _History_?
     - Push the `UP ARROW` in the console to scroll through your recent command history.
-    - Or select the `History` tab in the upper right next to the `Environment` tab.
-    
+    - To view your entire history, select the `History` tab in the upper right next to the `Environment` tab.
+
 - Get function help inside R: `?arrange()` 
 
 <br>
 
+</p>
+</details>
 
-#| Data transformation 
+
+
+# Data transformation {-}
 <hr>
 
-![](images/starwars_cleandroid.jpg){width="250"  style="float: right; margin-top: 10px; margin-left: 20px; margin-right: 36px;"}
 
-
-> "How can we best help Rey?""
-
-We have several different units of scrap items. This means unit conversions are in our future! And, it sounds like we're going to need some math for this puzzle. Let's calculate some new columns to help prioritize scrap scavenging work.
-
-<br><br>
+Let’s calculate some new columns to help prioritize Rey’s scavenging work.
 
 
 #| `mutate()`
 <hr>
 
-It's often useful to edit existing columns in a data frame or add new columns that are functions of existing columns. That's the job of `mutate() `.
-
-## Get to know your data frame
-
-Before we go changing things in the data frame we'll need to know the column names and the tables dimensions a bit better. These quick functions are all great ways to describe your data frame.
+`mutate() `can edit existing columns in a data frame or add new columns calculated from the existing data.
 
 
-### Data frame details {-}
+## Get to know your data frame {-}
 
-- `names(scrap)` show the column names
+Use these quick functions to describe your data frame.
 
-- `nrow(scrap)` number of rows 
+### Data frame info {-}
 
-- `ncol(scrap)` number of columns
+| Function          | Information             |  
+|:------------------|:------------------------|  
+| `names(scrap)`    | column names            |  
+| `nrow(scrap)`     | number of rows          |  
+| `ncol(scrap)`     | number of columns       | 
+| `summary(scrap)`  | summary of all columns  | 
+| `glimpse(scrap)`  | column names + a glimpse of first few values (requires loading _dplyr_ package)   |  
 
-- `summary(scrap)` summary of all columns
 
-- `glimpse(scrap)` column names, plus a glimpse of first few values (requires loading _dplyr_ package)
+## Add a column {-}
+<hr>
 
-<br>
-
-##Add a constant value or phrase to new column
-First let's add a column with our names, so that Rey will thank us personally on Liberation Day. 
+First let’s add a column with our names, so that Rey will thank us personally on Liberation Day. 
 ```{r mutate1, echo = T, eval = T}
+library(readr)
+library(ggplot2)
+library(dplyr)
 
-##Type in your name and rank
-scrap <- mutate(scrap, scrap_analyst = "Sergeant Derek")
+# Get data
+scrap <- read_csv("data/starwars_scrap_jakku.csv")
+
+## Add your name as a column
+scrap <- mutate(scrap, scrap_finder = "Your name")
 
 ```
 
-## Changing or modifying an existing column
+
+## Change a column  {-}
 <hr>
 
-Remember how that unit of Tons was written two ways: *TONS* and *Tons*? We can use _mutate_ together with _tolower_ to make sure all of the Salvage scrap is written in the same case. Case matters with R!
+![](images/starwars_cleandroid.jpg){width="250" style="float:right; margin-top:-4px; margin-left: 28px; margin-right: 2px;"}
 
-```{r mutate2, echo = T, eval = T}
+Remember how that unit of Tons was written two ways: "TONS" and "Tons"? We can use `mutate()` together with `tolower()` to make sure all of the Salvage scrap is written in lower case. Case matters in R!
+
+```{r mutate-2}
 
 scrap <- mutate(scrap, Units = tolower(Units))
 
-##toupper() will change all of the letters in a column to upper case.
+# toupper() will change all of the letters in a column to upper case.
 ```
 
-## Tons to pounds conversions
 
-In our work we often use `mutate` to calculate new units for measurements. In this case, let's estimate the pounds for scavenge items that are reported in tons. 
-
-> __Pounds__ = Scrap in Tons / 2000
+## Add a calculated column {-}
+In our work we often use `mutate` to calculate new units for measurements. In this case, let’s estimate the pounds for scavenge items that are reported in tons. 
 
 
-### Convert an existing column to pounds {-}
-
-Use `filter()` to subset our data down to the items reported in tons and then use `mutate()` to convert the Amount column to pounds and change the Units column to "pounds".
+### Tons to pounds conversions {-}
+Use `filter()` to subset the data to the items reported in "tons", and then use `mutate()` to convert the `Amount` column to pounds. We can also change the `Units` column to "pounds" to avoid any confusion.
 
 ```{r, eval=F}
 
-scrap_pounds <- filter(scrap, Units = "cubic yards")
+scrap_pounds <- filter(scrap, Units == "tons")
 
 scrap_pounds <- mutate(scrap_pounds, 
-                   Amount = Amount/2000,
-                   Units = "pounds")
+                       Amount_lbs = Amount * 2000,
+                       Units      = "pounds")
 ```
 
 <br>
 
+
+I have now written `scrap_pounds` like a million times and I am sick of it. Do I have to type this much? I have rebels to protect and I haven’t eaten in 2 days. 
+
+<br>
 
 ### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
-> If you use `mutate()` and provide a single value for a column such as `Salvage_Analyst = "Sergeant Derek"`, then every row in the column you created will have that value. If you provide a vector of values, such as `Amount = Amount/2000`, then the column you create will have a list of values that each correspond to the values in the vector you provided. If you provide a vector that has a different length than the number of rows in your data frame, you'll get an error telling you that the number of values you provide must be equal to the number of rows in your data frame or be a single value.
+> __Error!__  
+>`Error in mutate_impl(.data, dots) : `
+>
+> If you use `mutate()` and provide a single value for a column such as `5`, every row in the new column will have that value. 
+>
+> If you provide a vector of values, such as `lbs = Amount * 2000`, then a unique value will be calculated for each row. 
+>
+> An `Error` will occur if you provide a vector that is longer than 1, but has a different length than the number of rows in your data frame. The error message is a helpful reminder that you must provide a vector that is either a single value or the same length as your data frame.
 
-## Find your neighbor's Origin City
 
-Now let's see if you can use `mutate()` to help match the description of the Salvage from your City. Give your neighbor a series of clues about your origin city based on facts about the Salvage from that location.
 
-Here's a hint for ways to describe your City by describing its Salvage scrap data.
+#| The pipe `%>%`
 
-> My City's name starts with a T.
-> My City sold more than 1000 Acceleration compensators to a Trade Caravan. 
-> The total price was at least 800 credits.
+__Use the `%>%` young Padawan.__
 
-Use `mutate()`, `filter()`, and `arrange()` to figure out a way of describing your City by its Salvage scrap. Then, provide this information to your neighbor and have them figure out what City you are from.
-
-Here's a snippet to get you started.
-```{r neighbor1, eval=F}
-
-library("dplyr")
-
-## Filter down your data to the type of salvage in the hint
-my_scrap <- filter(scrap, Salvage == "Acceleration compensator")
-
-##arrange the data by 
-my_scrap <- arrange(my_scrap, desc(Amount))
-
-```
-<br>
-
-I have now written my_scrap like a million times and I am sick of it. R is so stupid why do I have to type all the time? I have rebels to protect and I haven't eaten in 2 days.
-
-You DON'T have to do that much typing. You can connect your functions if you are using the same data set.
-
-You can chain the `filter()` and `arrange()` functions together and do everything in one go. For that you can use the `%>%` (pipe).
-
-![](https://d21ii91i3y6o6h.cloudfront.net/gallery_images/from_proof/9302/medium/1447173978/rstudio-hex-pipe-dot-psd.png){width="115" align="left" style="margin-right:20px;"}
+![](https://d21ii91i3y6o6h.cloudfront.net/gallery_images/from_proof/9302/medium/1447173978/rstudio-hex-pipe-dot-psd.png){width="155" align="left" style="margin-right: 28px;"}
 
 <br>
 
-In a script the `%>%` is read as "and then". In the code below we are telling R to `mutate` the data __and then__ to `filter` it.
+Luckily, you __don’t__ have to do ALL that typing. The pipe let’s you can chain the `filter()` and `arrange()` functions together and do everything in one go. 
 
-<br>
+<br><br>
 
-```{r neighbor2, eval=F}
+```{r pipe-time}
 
-##Using the question Tuanul example above
 my_scrap <- scrap %>%
-  filter(Salvage == "Acceleration compensator") %>%
-  arrange(my_scrap, desc(Amount))
+            filter(Salvage == "Acceleration compensator") %>%
+            arrange(desc(Amount))
 
 ```
+
+
 
 #| `left_join()`
 
-Remember our different unit issue? Well, we do not want to convert the units one by one, and guess what? Our droid found a unit converter table. This will make things way easier!
+Remember our different units issue? 
 
-![](images/left_join_image.png){width="490"}
+Well, we don’t want to convert the units one by one. Luckily for us, BB8 found a unit converter table while surfing the web. How does BB8 keep doing that!?
 
-```{r read converter}
-##Name your table
-conversions <- "data/conversion_table.csv"
+## Get data directly from the interwebs {-}
 
-##Read in your table
-conversions <- read_csv(conversions)
+```{r read-convert}
+# The data's url
+convert_url <- "https://raw.githubusercontent.com/MPCA-air/RTrain/master/data/conversion_table.csv"
 
-##Join the scrap to the conversion table
-#We can also drop the units column since its duplicated by the old data set and it's been corrected
-scrap <- left_join(scrap, conversions, by = c("Salvage" = "desc")) %>% 
-  select(-units)
+# Read in the conversion data
+convert <- read_csv(convert_url)
 
+head(convert, 3)
 ```
+
+
+## Join 2 tables {-}
+
+### `left_join(table1, table2, by = c("columns to join by"))` {-}
 
 <br>
 
-__Hint:__ Remeber to type `?left_join` if you are wondering what the arguments are.
+![](images/left_join_image.png){style="width: 85%; max-width: 85%;"}
+
+<br>
+
+```{r join-convert}
+
+# Join the scrap to the conversion table
+scrap <- left_join(scrap, convert, by = c("Salvage" = "item"))
+
+head(scrap, 5)
+```
+
+
+<br>
+
+__Help!__ Remeber to type `?left_join` if you are wondering what the arguments are.
 
 
 #| `ifelse()`
 <hr>
 
-Sometimes you may not want to add the same value to an entire column, in other words you want to `mutate()` conditionally. We can use `ifelse()` to do this.
+Sometimes you may want the value of a new column to depend on the value of an existing column, in other words you want to `mutate()` conditionally. We use `ifelse()` to do this.
 
+### `ifelse(If this is true, "Do this", "Otherwise do this thing")` {-}
+
+<br>
 ```{r ifelse}
 
-##Convert tons to pounds, but only if the units are not already in tons.
+# Convert the Amount to pounds, but only if the units are not already in tons
 scrap <- scrap %>% 
-         mutate(Ton_Conv = ifelse(Units == 'tons', Amount, Amount * pounds / 2000))
+         mutate(Ton_Conv = ifelse(Units == 'tons', Amount, 
+                                                   Amount * pounds / 2000))
 
 ```
 
+<br>
 
-Wow!! Congratulations of galactic proportions to you. We have a clean and tidy data set. Someday if we receive data to append, all we will do is re-run this script and in 5 seconds we will have a cleaned up data set again!
+Congratulations of galactic proportions to you. We have a clean and tidy data set. If BB8 receives new data to append, we can re-run this script and in 5 seconds we will have a cleaned up data set again!
+
+
+## {- .tabset}
+
+#### <i class="fa fa-starwars" aria-hidden="true" style="color: green"></i> Exercise {-} 
+
+__Total price__
 
 We now have the amount of tons sold and the price per ton, but we want to know the total amount of credits for each transaction. How would we calculate that?
 
-```{r}
+<br>
+```{r, eval=F}
 
-##Calculate credits for each transaction
+# Calculate the total credits for each transaction
 scrap <- scrap %>% 
-  mutate(Credits = Ton_Conv * Price_per_Ton)
-
+         mutate(_______ = _______________)
 ```
 
-Now, we want to make some plots and really visualize this data, but Junk Bosses like old Unkar don't usually ask us for the raw data. We as data analysts get questions like, What's the highest number? What's the lowest number? What is the mean tonnage from Cratertown? Fast! Faster!! So, let us move on to _summarize_.
+<br><br><hr>
+
+
+#### Show hint {-}
+
+__Total price__
+
+We now have the amount of tons sold and the price per ton, but we want to know the total amount of credits for each transaction. How would we calculate that?
+
+<br>
+```{r, eval=F}
+# Calculate the total credits for each transaction
+scrap <- scrap %>% 
+         mutate(Credits = _______ * _______)
+
+```
+<br><br><hr>
+
+
+#### Show code {-}
+
+__Total price__
+
+We now have the amount of tons sold and the price per ton, but we want to know the total amount of credits for each transaction. How would we calculate that?
+
+<br>
+```{r}
+# Calculate the total credits for each transaction
+scrap <- scrap %>% 
+         mutate(Credits = Ton_Conv * Price_per_Ton)
+
+```
+<br><br><hr>
+
+
+## {-}
+
+<br>
+
+We as data analysts often get questions like, What’s the highest number? What’s the lowest number? What is the mean tonnage from Cratertown? So, let us move on to `summarize()`.
+
 
 #| `summarize()` this
 <hr>
 
 ![](images/summarize_diagram.png){width="490"}
 
+`summarize()` allows you to apply a summary function like `median()` to a column and collapse your data down to a single row. To really dig into `summarize` you’ll want to know some common summary functions, such as `sum()`, `mean()`, `median()`, `min()`, and `max()`.
 
-`summarize()` allows you to apply a summary function like `median()` to a column and collapse your data down to a single row. To really dig into `summarize` you'll want to know some common summary functions, such as `sum()`, `mean()`, `median()`, `min()`, and `max()`.
 
 
 ## `sum()` {-}
 
 Use `summarize()` and `sum()` to find the total credits from all Salvage.
 
-```{r, eval=F}
+```{r, eval=T}
 summarize(scrap, Total_Credits = sum(Credits))
 ```
 
@@ -397,25 +474,17 @@ summarize(scrap, mean_weight = mean(Ton_Conv, na.rm = T))
 ## `median()` {-}
 Use summarize to calculate the _median_ weight in the Salvage reports.
 
-```{r, eval=T}
-summarize(scrap, median_price = median(Ton_Conv, na.rm = T))
-```
+`summarize(scrap, median_price = median(Ton_Conv, na.rm = T))`
 
 ## `max()` {-}
 Use summarize to calculate the _maximum_ price per ton any scrapper got for their Salvage.
 
-```{r, eval=T}
-summarize(scrap, max_price = max(Price_per_Ton, na.rm = T))
-```
+`summarize(scrap, max_price = max(Price_per_Ton, na.rm = T))`
 
 ## `min()` {-}
 Use summarize to calculate the _minimum_ price per ton any scrapper got for their Salvage.
 
-
-```{r, eval=T}
-summarize(scrap, min_price = min(Price_per_Ton, na.rm = T))
-```
-
+`summarize(scrap, min_price = min(Price_per_Ton, na.rm = T))`
 
 ## `nth()` {-}
 Use `summarize()` and `nth(Origin, 12)` to find the name of the Origin City that got the  _12th_ highest scrapper haul.   
@@ -424,14 +493,11 @@ _Hint: Use `arrange()` first._
 
 `arrange(scrap, desc(Ton_Conv)) %>% summarize(price_12 = nth(Origin, 12))`
 
-
-
 ## `sd()` {-}
 
 What is the _standard deviation_ of the credits?
 
 `summarize(scrap, stdev_Credits = sd(Credits))`
-
 
 ## `quantile()` {-}
 
@@ -451,98 +517,108 @@ _Hint: add `na.rm = T` to `quantile()`._
 
 `n()` stands for _count_.
 
-Use summarize and `n()` to count the number of reported Salvage that went to a Niima outpost. 
+Use summarize and `n()` to count the number of reported Salvage records going to a Niima outpost. 
 
 _Hint: Use `filter()` first._  
 
-`filter(scrap, Dest == "Niima outpost") %>% summarize(salvage_count = n())`
+```{r}
+filter(scrap, Dest == "Niima Outpost") %>% summarize(salvage_records = n())
+```
 
 <br>
 
 
 ### <i class="fa fa-starwars" aria-hidden="true" style="color: green"></i> Exercise {-}
 
-- Create a Star Wars scrap summary using 3 of the math functions above. 
+Create a summary of the scrap data that includes 3 of the summary functions above. 
+
+```{r, eval=F}
+
+summary <- summarize(scrap, 
+                     max_credits      = __________,
+                     weight_90th_pct  = quantile(Weight, 0.90),
+                     count_records    = __________,
+                     
+```
 
 
 
 #| `group_by()`
 <hr>
 
-> Wouldn't it be nice if we could easily find the mean price for every Origin City? It's time for `group_by()`!
-
-
-If you thought `summarize` was awesome, wait until you include `group_by` with your `summarize` commands. 
-
-Try using `group_by` with the column _Origin_ and then use `summarize` to count the number of Salvage reports from each planet.  
-
-```{r grp-by-origin, eval = FALSE}
-
-group_by(scrap, Origin) %>% summarize(origin_count  =  n()) %>% ungroup()
-
-```
-
-### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
-> Ending with `ungroup()` is good practice. This will prevent your data from staying grouped after the summarizing has been completed.
+> Wouldn’t it be nice if we could easily find the mean price at every Origin City? It’s time for `group_by()`!
 
 <br>
 
-> What about the mean of the prices that each Origin City got?
+Let’s use `group_by` with the column _Origin_ again, but this time use `summarize` to find the `mean(Price_per_Ton)` for each Origin City. 
 
-Let's use `group_by` with the column _Origin_ again, but this time use `summarize` to find the `mean(Price_per_Ton)` for each Origin City. 
+```{r mean_price-by-origin}
 
-```{r mean_price-by-origin, eval = FALSE}
-
-group_by(scrap, Origin) %>% 
-      summarize(mean_price =  mean(Price_per_Ton, na.rm = T)) %>% ungroup()
+scrap_summary <- group_by(scrap, Origin) %>% 
+                 summarize(mean_price =  mean(Price_per_Ton, na.rm = T)) 
 
 ```
 
+
 <br>
 
-That's a lot of digits! 
 
-
-## `round()`
+<details><summary class="btn_code"> Rounding digits </summary><p>
 
 You can round the prices to a certain number of digits using the `round()` function. We can finish by adding the `arrange()` function to sort the table by our new column.
 
-```{r mean_price-by-Origin-round, eval = FALSE}
+```{r mean_price-by-Origin-round}
 
-group_by(scrap, Origin) %>% 
-  summarize(mean_price       =  mean(Price_per_Ton, na.rm = T),
-            mean_price_round = round(Price_per_Ton, digits = 2)) %>%  
-  arrange(mean_price_round) %>% ungroup()
+scrap_means <- group_by(scrap, Origin) %>% 
+                 summarize(mean_price       =  mean(Price_per_Ton, na.rm = T),
+                           mean_price_round = round(mean_price, digits = 2)) %>%  
+                 arrange(mean_price_round) %>%
+                 ungroup()
 
 ```
 
 <br>
 
-__NOTE:__ The `round()` function in R does not automatically round values ending in 5 up, instead it uses scientific rounding. It rounds values ending in 5 to the nearest even number, so 2.5 rounded to the nearest whole number using `round()` is 2, and 3.5 rounded to the nearest whole number is 4. If you want to round all values ending in 5 up, then you'll have to use a rounding function from another package.
+__NOTE:__ The `round()` function in R does not automatically round values ending in 5 up, instead it uses scientific rounding. It rounds values ending in 5 to the nearest even number, so 2.5 rounded to the nearest whole number using `round()` is 2, and 3.5 rounded to the nearest whole number is 4. If you want to round all values ending in 5 up, then you’ll have to use a rounding function from another package.
+
+</p></details>
+
+
+<br>
+
+Try using `group_by` with the column _Origin_ and then use `summarize` to count the number of Salvage reports from each city.  
+
+```{r grp-by-origin, eval = FALSE}
+
+scrap_counts <- group_by(scrap, Origin) %>% 
+                summarize(origin_count  =  n()) %>% 
+                ungroup()
+
+```
+
+
+<br>
+
+### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
+> Ending with `ungroup()` is good practice. This will prevent your data from staying grouped after the summarizing has been completed.
 
 
 
 #| Save files
 <hr>
 
-Let's save the last summary table we created to a _CSV_. That way we can print it to have it __transmitted through Droid courier__ to Unkar. To save a data frame we'll use the `write_csv()` function from our favorite _readr_ package. 
+Let’s save the mean price summary table we created to a _CSV_. That way we can print it to have it __transmitted through Droid courier__ to Rey. To save a data frame we’ll use the `write_csv()` function from our favorite _readr_ package. 
 ```{r, eval = F}
 
-# First give the new data a name
-scrap_summary <- group_by(scrap, Origin) %>% 
-  summarize(mean_price       =  mean(Price_per_Ton, na.rm = T),
-            mean_price_round = round(Price_per_Ton, digits = 2)) %>%  
-  arrange(mean_price_round) %>% ungroup()
-
-# Write the file to your project folder
-write_csv(scrap_summary, "mean_prices_origin.csv")
+# Write the file to your results folder
+write_csv(scrap_means, "results/Mean_prices_by_origin.csv")
 
 ```
 
 
 
 ### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
-> __Warning!__ R will overwrite a file if the file already exists in a folder. It will not ask for confirmation. You will not collect $200.
+> __Warning!__ By default, R will overwrite a file if the file already exists in a folder. It will not ask for confirmation. To be safe, do not save processed data to your `data\` folder.
 >
 
 <br>
@@ -563,43 +639,18 @@ group_by(scrap, Origin) %>% mutate(origin_mean_price = mean(Price_per_Ton, na.rm
 
 <br>
 
-### {- .tabset}
-
-#### <i class="fa fa-user-starwars" aria-hidden="true" style="color: green"></i> Exercise  {-}
-<br>
-
-- Find the median weight for each Destination.
-
-```{r, eval=F}
-group_by(scrap, Dest) %>% 
-  mutate(median_weight = _________________)
-```
-
-<br><br><hr>
-
-#### Show code {-}
-<br>
-
-```{r, eval=F}
-group_by(scrap, Dest) %>% 
-  mutate(median_weight = median(Ton_Conv, na.rm = T))
-```
-
-<br><br><hr>
+Let’s visualize the data with some more plots.
 
 
-## Break time <i class="fa fa-hourglass-half" aria-hidden="true" style="color:#040707;"></i> {-}
+#| Make a `ggplot()` sandwich
+<hr>
 
-<br> Take 5 minutes to relax. <br>
+![](images/auto_plot.gif){style="float: right; margin-top: -20px; width: 105%;"}
 
-#| ggplot
 
-All of this information is great, but Rey doesn't have time to look at tables. Let's visualize the data with some plots. Let's go more in-depth into ggplot.
+## The 3 ingredients of a `ggplot` {-}
 
-## The 3 parts of a _ggplot_
-
-### 1. Set the base plot (the Dorian plot).
-
+### 1. The base plot {-}
 ```{r, echo=F}
 library(ggplot2)
 ```
@@ -611,36 +662,67 @@ ggplot(scrap)
 
 <br>
 
-> Note when we load the package it's `library ("ggplot2")` but when we use the function, it's `ggplot(scrap)` without the 2 following ggplot. It's annoying, but that's the way it is.
+> Note when we load the package it’s `library ("ggplot2")`, but the function to make a plot is `ggplot(scrap)`. We admit, it is a bit silly.
 
-### 2. Set the X, Y _(aesthetics)_.
-_Aesthetics_ are the visual components from the data that you want to use in the chart. These also determine the dimensions of the plot.
+
+### 2. The the X, Y _(aesthetics)  {-}
+The _aesthetics_ assign the components from the data you want to use in the chart. These also determine the dimensions of the plot.
 
 ```{r}
 ggplot(scrap, aes(x = Dest, y = Credits)) 
 ```
 
-### 3. Add layers _(geometries)_.
+
+### 3. The layers or _geometries_  {-}
 ```{r}
-ggplot(scrap, aes(x = Dest, y = Credits)) +
-  geom_point()
+ggplot(scrap, aes(x = Dest, y = Credits)) + geom_point()
 ```
 
 <br>
 
-Now let's use color to show the origins of the scrap
 
+#### <i class="fa fa-starwars" aria-hidden="true" style="color: green"></i> Exercise {-}
+
+Try making a scatterplot of any two columns.
+
+_Hint: Numeric variables will be more informative._
+
+```{r, eval=F}
+ggplot(scrap, aes(x = __column1__, y = __column2__)) + geom_point()
+```
+
+## Colors {-}
+<hr>
+
+
+Now let’s use color to show the origins of the scrap
 ```{r}
 ggplot(scrap, aes(x = Dest, y = Credits, color = Origin)) +
   geom_point()
 ```
 
-This is a too much detail. Let's make a bar chart and add up the sales to make it easier to understand.
 
+This is a too much detail. Let’s make a bar chart and add up the sales to make it easier to understand.
 ```{r}
-ggplot(scrap, aes(x = Dest, y = Credits, fill = Origin)) +
-  geom_bar(stat = "sum")
+ggplot(scrap, aes(x = Dest, y = Credits, fill = Origin)) + geom_bar(stat = "sum")
 ```
 
 
+What if we want to make it easier to compare sales by origin? Let’s change the position:
+```{r}
+ggplot(scrap, aes(x = Dest, y = Credits, fill = Origin)) +
+  geom_bar(stat = "sum", position = "dodge")
+```
 
+
+# Homeworld training {-}
+
+1. Load one of the data sets below into R
+    - Porg contamination: `https://raw.githubusercontent.com/MPCA-air/RTrain/master/data/Porg_samples.csv`
+    - Endor air samples: `https://raw.githubusercontent.com/MPCA-air/RTrain/master/data/air_endor.csv`
+    - Or use data from a recent project of yours
+2. Create 2 types of plots using the data. _Don’t worry if it looks really-really weird. Consider it art._
+3. Paste the function `runif(1)` into your console. 
+    - If the number you get is bigger than `0.2` e-mail your charts to the rest of the class.
+
+<br>
