--- a/02_Day2.Rmd
+++ b/02_Day2.Rmd
@@ -22,11 +22,10 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 ```
 
 # Good morning Jedis! {-}
-<hr>
 
-![](images/day2_bb8_sq.png){width="260" style="float: left; margin-right: 60px; margin-top: -10px;"}
+![](images/day2_bb8_sq.png){width="260" style="float: left; margin-right: 60px; margin-top: -4px;"}
 
-## Schedule  {-}
+### Schedule  {-}
 
     - Review
     - Air data example
@@ -42,72 +41,47 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 ## Review Day 1 {-}
 <hr>
 
-<br>
+- We kicked off with a tour of RStudio.
 
-  - First we made a wordcloud with the package wordcloud2. 
-  - This exercise taught us to write in command line and how to install and open packages in R Studio.
-  - And it was beautiful!
-  
-  <br>
-  
 
-![](images/name_cloud_mpca.png){style="width: 100%; margin-top: 12px;"}
-
+![](images/rstudio.png){style="width: 74%; margin-left: 12.5%;"}
 
 <br>
 
-  - Next we took a tour of R Studio.
-  - We took a tour of R Studio.
-  - Are there are any remaining questions about that?
-  
-<br>
-  
-
-![](images/rstudio.png){style="width: 85%;"}
-
-<br>
-
-- Later we learned about objects, the assignment operator, and how to remove objects from your environment.
+- And jumped into storing values, naming objects, and how to remove objects from the environment.
 - We made lists with `c()`
-- Then, big dramatic pause here, we made a table known as a data.frame.
+- We brought lists together into a table, also known as a `data frame` or `tibble`.
   
 <br>
   
 
-![](images/vector_to_dataframe.png){width="510" style="margin-left: 100px;"}
+![](images/vector_to_dataframe.png){width="50%" style="margin-left: 8%;"}
+
 
 <br>
 
-- We read in data using `readr()`
+![](images/readr-hexbin-sticker-from-rstudio.png){width="145" style="float: left; margin-right: 0; margin-bottom: 12px;"}
+![](images/ggplot2_hex.png){width="140" style="float: left; margin-right: 22px; margin-top: 10px;  margin-left: 6px;"}
 
 <br>
 
-
-![](images/readr-hexbin-sticker-from-rstudio.png){align="left" width="145" style="margin-right:18px; margin-bottom: 12px;"}
-
-<br>
-
-- And then we made our first plot with the `ggplot()` function using the *ggplot2 package*.
-  
-<br>
+- We installed new packages
+- Read in scrap data from online using `read_csv()`
+- And made our first plot with the `ggplot()` function from the **ggplot2** package
   
 
-![](images/ggplot2_hex.png){width="164" style="float: left; margin-right: 26px; margin-top: 10px;  margin-left: 0;"}
+<div style="clear: both;"></div>
+<br>
 
+<div class="well">
+<h3><i class="fas fa-mitten"></i></h3>
+
+Are there any questions? Any questions at all. No matter how large or terribly small... Last chance, we are about to move on...
+</div>
 
 <br>
 
-- Are there any questions?
-- Any questions at all..no matter how large or how small...
-- Ask them now, because we are moving on...
-  
-
-<br>
-
-![](images/moving_on.jpg){align="left" width="400" style="margin-right:18px; margin-bottom: 12px;"}
-
-<br><br><br>
-
+![](images/moving_on.jpg){width="50%" style="margin-left: 7%; margin-bottom: 10px;"}
 
 
 # Analysis workflow {-}
@@ -169,6 +143,7 @@ air_data <- read_csv("https://itep-r.netlify.com/data/OZONE_samples_demo.csv")
 
 ```{r tbl, echo=F}
 library(knitr)
+library(dplyr)
 
 air_data %>% sample_n(5) %>% select(SITE, Date, OZONE, TEMP_F) %>% kable()
 ```
@@ -249,20 +224,17 @@ ggsave("results/2015-2017 - Ozone vs Temp.pdf")
 ```
 
 
-### 8. Share with the world {-}
+### 8. Share with friends {-}
 
 <a href = "https://github.com/dKvale/ex__OZONE__Project">
 ![](images/github_example_ozone.png){style="width: 95%;"}
 </a>
 
 
-<br><br>
+<br>
 
 <div class="well">
-
-Having an exact record of what you did can serve as great documentation for yourself and others. So next year when your coworker asks why they're getting a different answer for the average ozone concentration in 2016, or why you dropped some values from the data, you'll be able to tell them. 
-
-Or when the lab gets back to you and lets you know the ozone observations were okay on the day that the instrument recorded ridiculously high temperatures, you can update that line in the script and push re-run.
+Having an exact record of what you did can be great documentation for yourself and others. It's also handy for when you want to repeat the same analysis on new data. Then all you need to do is copy the script, update the one read data line, and push run to get your new set of fancy charts.
 </div>
 
 
@@ -274,7 +246,7 @@ It's time to jump back in to where we left off on __Day 1__.
 scrap <- read_csv("https://itep-r.netlify.com/data/starwars_scrap_jakku.csv")
 ```
 
-# Plot scrap data {-}
+## Plot scrap data {-}
 
 Last time we made a column plot showing the amount of scrap coming from each town.
 ```{r, fig.width=12}
@@ -294,18 +266,11 @@ ggplot(scrap, aes(y = amount, x = origin)) +
 
 ![](images/dplyr_hex.png){width="128" align="left" style="margin-right: 32px; margin-top: 8px; margin-bottom: 20px;"}
 
-<br><br>
-
-_You've unlocked a new package!_  
-
 <br>
 
+The _dplyr_ package is our go-to tool for exploring, re-arranging, and summarizing data. Use `install.packages("dplyr")` to add _dplyr_ to your library.  
+
 <div style="clear: both; margin-top: 22px;"></div>
-
-The _dplyr_ package is our go-to tool for exploring, re-arranging, and summarizing data.  
-
-Use `install.packages("dplyr")` to add _dplyr_ to your library.  
-
 
 ## Functions to get to know your data. {-}
 
@@ -630,10 +595,10 @@ starwars_data <- starwars
 ```
 
 
-## <span style="text-decoration: underline;"> The Rules </span> {-}
+## <span style="text-decoration: underline;"> Rules </span> {-}
 
-1. Scroll through the Star Wars dataset and find a character you find interesting.
-   - Or run `sample_n(starwars_data, 1)` to choose your character at random.
+1. You have a __secret__ identity.
+1. Scroll through the Star Wars dataset and find a character you find interesting. _(Or run `sample_n(starwars_data, 1)` to choose your character at random.)_
 1. __Keep it hidden!__ Don't show your neighbor the character you chose.
 1. Take turns asking each other questions about your partner's Star Wars character. 
 1. Use the answers to build a `filter()` function and narrow down the potential character your neighbor may have picked. 
@@ -653,11 +618,11 @@ mr_koon <- filter(starwars_data,
 ```
 </div>
 
-5. _Elusive_ answers are encouraged.
+6. _Elusive_ answers are encouraged.
     - For example, if someone asks: _What is your character's mass?_ 
     - You can respond: _My character's mass is equal to one less than their age._ 
     - Or if you're feeling generous you can give a more straight forward answer such as: _My character's mass is definitely more than 100 and less that 140._
-6. Sometimes a character will not have a specific attribute. We learned earlier how R stores nulls as `NA`. If your character has a missing value for hair color, one of your filter statements could be `is.na(hair_color)`. 
+7. Sometimes a character will not have a specific attribute. We learned earlier how R stores nulls as `NA`. If your character has a missing value for hair color, one of your filter statements could be `is.na(hair_color)`. 
 
 <br>
 
@@ -959,7 +924,7 @@ When you have this type of time series data it's helpful for R to know which col
 
 ### The `lubridate` package {-}
 
-![](images/lubridate.png){style="width: 22%; float: left; margin-right: 30px; margin-top: 8px; margin-bottom: 12px;"}
+![](images/lubridate.png){style="width: 21%; float: left; margin-right: 30px; margin-top: 8px; margin-bottom: 12px;"}
 
 
 <br>
@@ -1088,6 +1053,6 @@ It looks like there really were high magnetic field readings in November of Gala
 <br>
 
 
-## <i class="fa fa-rocket" aria-hidden="true"></i> Return to [Homebase](index.html) {-}
+# <i class="fa fa-rocket" aria-hidden="true"></i> Return to [Homebase](index.html) {-}
 
 <br>
